# fastly4edge

customWasm/: fastly.toml
diverBabbage/resources/: v1.wasm.wat  v2.wasm.wat  v3.wasm.wat  v4.wasm.wat
fastly4edge/: a.wat
fastly4edge/tests/resources/: babbage.wat  body1.wat
wat2mir/: a.wat
wat2mir/tests/resources/: babbage_main.wat
wiversify/: a.wat
wiversify/t2wasm/: Cargo.toml
wiversify/tests/resources/: babbage.wat  babbage_main.wat  body1.wat  main.wasm
