[package]
name = "t2wasm"
version = "0.1.0"
authors = ["Jacarte <javierca@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wat2mir_macro = { path = "../wat2mir_macro" }
diversifier = { path = "../diversifier" }
rand = "0.7.2"